overflow fix

--- a/styles.scss
+++ b/styles.scss
@@ -24,6 +24,7 @@ body {
       position: absolute;
       width: 100%;
       height: 100%;
+      overflow-x: hidden;
       .hero--top {
         position: relative;
         .hero--top--left {
